# O-Chat

./: CMakeLists.txt  README.md  vcpkg.json
include/: Client.h  ConsoleUi.h  Crypto.h  Server.h  Session.h
portfolio/: README.md  case-study.md  one-page.html  portfolio-post.md  report.html  resume-bullets.md
src/: Client.cpp  ConsoleUi.cpp  Crypto.cpp  CryptoSelfTest.cpp  Server.cpp  Session.cpp  main.cpp
